# HR-Data-Cleansing-DemoApp

./: .env.template  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/raw/: raw_hr_data.csv
docs/: architecture.md  business_impact.md
scripts/: generate_sample_data.py
src/: anomaly_detection.py  dashboard_ui.py  data_cleaning.py  kpi_calculator.py  report_generator.py  validation.py
tests/: test_core.py
